# souvenir

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust.yml
souvenir-core/: Cargo.toml
souvenir-core/src/: error.rs  id.rs  identifiable.rs  lib.rs  prefix.rs  suffix.rs  tagged.rs
souvenir-core/src/encoding/: id.rs  mod.rs  prefix.rs  suffix.rs
souvenir-core/src/integration/: diesel.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
souvenir-macros/: Cargo.toml
souvenir-macros/src/: id.rs  identifiable.rs  lib.rs  prefix.rs  tagged.rs
souvenir-wasm/: Cargo.toml  LICENSE  build.sh
souvenir-wasm/src/: lib.rs
src/: diesel.rs  encoding.rs  error.rs  generic.rs  id.rs  identifiable.rs  lib.rs  rand.rs  serde.rs  sqlx.rs
src/encoding/: id.rs  mod.rs  prefix.rs  suffix.rs
src/integration/: diesel.rs  mod.rs  rand.rs  serde.rs  sqlx.rs
