[package]
name = "souvenir"
description = "Prefixed identifier library"
license = "MIT"
repository = "https://github.com/j5pr/souvenir"
version = "0.3.3"
edition = "2021"
rust-version = "1.61"

[features]
default = ["rand", "serde"]
all = ["diesel-postgres", "diesel-mysql", "diesel-sqlite", "rand", "serde", "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"]
diesel = ["dep:diesel"]
diesel-postgres = ["diesel", "diesel/postgres_backend"]
diesel-mysql = ["diesel", "diesel/mysql_backend"]
diesel-sqlite = ["diesel", "diesel/sqlite"]
rand = ["dep:rand"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
diesel = { version = "2.2.7", optional = true }
rand = { version = "0.9.0", optional = true }
serde = { version = "1.0.217", optional = true }
sqlx = { version = "0.8.3", optional = true }

