[workspace]
members = ["souvenir-*"]
resolver = "3"

[workspace.package]
version = "0.4.1"
edition = "2024"
authors = ["Brian Shao"]
license = "MIT"
repository = "https://github.com/bjzsh/souvenir"

[package]
name = "souvenir"
description = "Prefixed identifier library"
rust-version = "1.85"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["rand", "serde"]
all = ["diesel-postgres", "diesel-mysql", "diesel-sqlite", "rand", "serde", "sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"]
diesel = ["dep:diesel"]
diesel-postgres = ["diesel", "diesel/postgres_backend"]
diesel-mysql = ["diesel", "diesel/mysql_backend"]
diesel-sqlite = ["diesel", "diesel/sqlite"]
rand = ["dep:rand"]
serde = ["dep:serde"]
sqlx = ["dep:sqlx"]
sqlx-postgres = ["sqlx", "sqlx/postgres"]
sqlx-mysql = ["sqlx", "sqlx/mysql"]
sqlx-sqlite = ["sqlx", "sqlx/sqlite"]

[dependencies]
diesel = { version = "2.2.12", optional = true }
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.219", optional = true }
sqlx = { version = "0.8.6", optional = true }
