[workspace]
members = [".", "souvenir-*"]
resolver = "3"

[workspace.package]
version = "0.5.5"
edition = "2024"
authors = ["Brian Shao"]
license = "MIT"
repository = "https://github.com/bjzsh/souvenir"
rust-version = "1.86"

[package]
name = "souvenir"
description = "Prefixed identifier library"

version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["macros", "rand", "serde"]
all = ["macros", "souvenir-core/all"]

macros = ["dep:souvenir-macros"]

diesel = ["souvenir-core/diesel"]
rand = ["souvenir-core/rand"]
serde = ["souvenir-core/serde"]
sqlx = ["souvenir-core/sqlx"]

postgres = ["souvenir-core/postgres"]
mysql = ["souvenir-core/mysql"]
sqlite = ["souvenir-core/sqlite"]

[target.'cfg(any())'.dependencies]
souvenir-macros = { workspace = true }

[workspace.dependencies]
souvenir-core = { version = "=0.5.5", path = "souvenir-core" }
souvenir-macros = { version = "=0.5.5", path = "souvenir-macros" }
souvenir = { version = "=0.5.5", path = "." }

[dependencies]
souvenir-core = { workspace = true }
souvenir-macros = { workspace = true, optional = true }
