[package]
name = "souvenir-core"
description = "Core implementation for souvenir. Not intended to be used directly."

version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
all = ["diesel", "rand", "serde", "sqlx", "postgres", "mysql", "sqlite"]
postgres = ["diesel?/postgres_backend", "sqlx?/postgres"]
mysql = ["diesel?/mysql_backend", "sqlx?/mysql"]
sqlite = ["diesel?/sqlite", "sqlx?/sqlite"]

[dependencies]
diesel = { version = "2.2.12", optional = true }
rand = { version = "0.9.2", optional = true }
serde = { version = "1.0.219", optional = true }
sqlx = { version = "0.8.6", optional = true }
