[package]
name = "souvenir-macros"
description = "Procedural macros for souvenir"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
souvenir-core.workspace = true
syn = "2.0.106"

[dev-dependencies]
rand = "0.9.2"
souvenir = { version = "0.5", path = ".." }
