[package]
name = "souvenir-wasm"
description = "A type-safe prefixed identifier library."
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Os",
]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
souvenir = { workspace = true }
wasm-bindgen = "0.2"
